// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should adopt a textAlign prop 1`] = `
<styled.p
  align="left"
  textAlign="center"
>
  Centered text
</styled.p>
`;

exports[`should adopt an align prop 1`] = `
<styled.p
  align="center"
  textAlign="left"
>
  Centered element
</styled.p>
`;

exports[`should render its text 1`] = `
<styled.p
  align="left"
  textAlign="left"
>
  Text
</styled.p>
`;
